# logicap

./: .gitignore  Makefile  aximm.v  aximm_slave.v  axisfifo.v  capture.v  cfggen  cfggen.py  inputgen  logicap.mmap  logicap.v  logicaptb.v  pyproject.toml  requirements.txt  trigger.v  triggertb.v
logicap/: __init__.py  config.py  inputs.py  trigger.py  util.py  validators.py
src/chisel/: axi_stream.scala  axis_fifo.scala  build.sbt  configuration.scala
src/chisel/src/main/scala/logicap/: axi_stream.scala  axis_fifo.scala  capture.scala  configuration.scala  trigger.scala
src/misc/: logicap.mmap
src/verilog/: axisfifo.v  capture.v  trigger.v
test/: logicaptb.v
test/configs/: config1.json  input1.json  input1.vg
test/src/: logicaptb.v
tools/: cfggen
tools/logicap/: trigger.py
