[tool.poetry]
name = "logicap"
version = "0.1.0"
description = ""
authors = ["Bruno <brunosmmm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
dictator = {git = "https://github.com/brunosmmm/dictator.git", rev = "master"}
hdltools = {git = "https://github.com/brunosmmm/hdltools.git", rev = "master"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
